# discogs-ai-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
collection-agent/: .dockerignore  Dockerfile  README.md  export_batch.py  matcher.py  pyproject.toml  requirements.txt  review_batch.py
collection-agent/data/: sample_batches.csv
collection-agent/notebooks/: 01_matcher_experiments.ipynb
collection-agent/src/collection_agent/: __main__.py  agent.py  cli.py  models.py  registry.py  settings.py  youtube_links.py
collection-agent/src/collection_matcher/: __init__.py  export_batch.py  matcher.py  review_batch.py
collection-agent/tests/: conftest.py
collection-agent/tests/fixtures/: discogs_payloads.py  fake_client.py
collection-agent/tests/integration/: test_agent_loop.py  test_agent_playlist.py  test_eval_harness.py  test_organize_flow.py  test_scan_server.py  test_sync.py
collection-agent/tests/unit/: test_analytics.py  test_discogs_client_images.py  test_discogs_client_scan.py  test_docker_packaging.py  test_eval_dataset.py  test_eval_gitignore_guard.py  test_eval_readonly_guard.py  test_eval_replay.py  test_eval_scoring.py  test_eval_sources.py  test_filters.py  test_media.py  test_no_cross_imports.py  test_playlist_links.py  test_playlist_prompt.py  test_registry.py  test_release_url.py  test_scan_journal.py  test_scan_models.py  test_scan_page_links.py  test_scan_retention.py  test_scan_search.py  test_scan_vision.py  test_secrets_hygiene.py  test_settings_tracing.py  test_snapshot_store.py  test_tracing_noop.py  test_youtube_links.py
(+284 files in other folders)
